--- a/products.html
+++ b/products.html
@@ -1079,15 +1079,12 @@
                         <li class="ss-carousel__item textBlock">
                           <div class="ss-carousel__description">
                             <p>
-                              Structural columns are transformed into sleek
-                              design elements, featuring layered wave-shaped
-                              display racks crafted from brass and
-                              stainless-steel pipes. Subtle brass accents lend a
-                              touch of luxury, creating a striking contrast.
-                              Previously challenging columns have been
-                              ingeniously reshaped into curved display racks
-                              that seamlessly wrap around the pillars, enhancing
-                              both spatial flow and product presentation.
+                              Structural columns are reimagined as elegant
+                              design elements, featuring wave-shaped display
+                              racks in brass and stainless-steel. Subtle brass
+                              accents introduce a refined touch of luxury,
+                              creating a bold contrast with the sleek metallic
+                              composition.
                             </p>
                           </div>
                         </li>
@@ -1175,12 +1172,12 @@
                         <li class="ss-carousel__item textBlock">
                           <div class="ss-carousel__description">
                             <p>
-                              Despite the compact layout, the design ensures
-                              effortless circulation and a sense of openness.
-                              This approach harmoniously combines artistic
-                              expression with functional ingenuity, elevating
-                              the brand identity and enriching the customer
-                              experience.
+                              Curved racks wrap seamlessly around pillars,
+                              enhancing spatial fluidity. This transformation
+                              elevates product presentation and optimizes space.
+                              Despite a compact layout, circulation remains open
+                              and intuitive. The design blends artistry with
+                              function, reinforcing brand identity.
                             </p>
                           </div>
                         </li>
@@ -1195,6 +1192,276 @@
 
                         <li class="ss-carousel__item mapBlock">
                           <div id="map1l2" class="map"></div>
+                        </li>
+
+                        <li class="ss-carousel__item teamBlock threeGrid">
+                          <div class="teamlist">
+                            <div>
+                              <h5>Project Leader</h5>
+                              <p>Madhu sudhan rao Pulipati</p>
+                              <h5 class="subHead2">
+                                Project Architect, Concept
+                              </h5>
+                              <p>Ar. Pranay Mithilesh Pulipati</p>
+                              <p>Id. Medha Pulipati</p>
+                              <h5 class="subHead2">Project Manager</h5>
+                              <p>Rakesh CH</p>
+                              <h5 class="subHead2">Procurment Manager</h5>
+                              <p>Abhilash.V</p>
+
+                              <h5 class="subHead2">Project Team</h5>
+                              <p>Ravi Kumar K</p>
+
+                              <p>Ar. Chennakeshava.R</p>
+                              <p>Ar. Vaishnavi Basireddy</p>
+                              <p>Krishna Kanth P</p>
+                              <p>Rajib roy</p>
+
+                              <p>Shamsheer p</p>
+                              <p>Chandan Halder</p>
+                              <p>Somisetty Baby Sushma</p>
+                            </div>
+
+                            <div>
+                              <h5>Project Incharge</h5>
+                              <p>Ameer khan</p>
+                              <h5 class="subHead2">Operational manager</h5>
+                              <p>Fathima</p>
+
+                              <h5 class="subHead2">Photograghy</h5>
+                              <p>Victor</p>
+                              <h5 class="subHead2">Content</h5>
+                              <p>Ananth</p>
+                              <h5 class="subHead2">Relationship Manager</h5>
+                              <p>Tharani M</p>
+                            </div>
+                          </div>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Project Item-->
+
+              <div class="projectItem">
+                <div class="firstSection">
+                  <div class="basicInfo">
+                    <div class="icon">
+                      <img src="/projects/ladia/Ladia_Logo_01.jpg" />
+                    </div>
+                    <div class="projectTitleInfo">
+                      <h3 class="projectTitle">Ladia - Display Rack</h3>
+                      <p class="location">JUBILEE HILLS, PUNJAGUTTA</p>
+                    </div>
+                  </div>
+                  <div class="heroSection">
+                    <img src="/products/ladia-display-rack/1.JPG" alt="" />
+                  </div>
+                </div>
+
+                <div class="detailContainer">
+                  <div class="ss-carousel">
+                    <div class="ss-carousel__wrapper">
+                      <div class="ss-carousel__header">
+                        <div class="ss-carousel__controls">
+                          <button
+                            class="ss-carousel__arrow disabled arrow-prev"
+                          ></button>
+                          <button
+                            class="ss-carousel__arrow arrow-next"
+                          ></button>
+                        </div>
+                      </div>
+                      <ul class="ss-carousel__content">
+                        <li class="ss-carousel__item firstInfo">
+                          <div class="basicInfo">
+                            <div>
+                              <div class="icon">
+                                <img src="/projects/ladia/Ladia_Logo_01.jpg" />
+                              </div>
+                              <div class="projectTitleInfo">
+                                <h3 class="projectTitle">
+                                  Ladia - Display Counter
+                                </h3>
+                                <p class="location">
+                                  JUBILEE HILLS, PUNJAGUTTA
+                                </p>
+                                <p class="location">2023</p>
+                              </div>
+                            </div>
+                            <div class="moreInfo">
+                              <div>
+                                <h4>Client</h4>
+                                <p>Akhil</p>
+                              </div>
+                              <div>
+                                <h4>Typology</h4>
+                                <p>Commercial</p>
+                              </div>
+                              <div>
+                                <h4>Size</h4>
+                                <p>32 S.ft</p>
+                              </div>
+                              <div>
+                                <h4>Status</h4>
+                                <p>Completed</p>
+                              </div>
+                            </div>
+                            <div class="socialSection">
+                              <div>
+                                <a href="#" target="_blank"
+                                  ><i class="bi bi-facebook"></i
+                                ></a>
+                              </div>
+                              <div>
+                                <a href="#" target="_blank"
+                                  ><i class="bi bi-instagram"></i
+                                ></a>
+                              </div>
+                              <div>
+                                <a href="#" target="_blank"
+                                  ><i class="bi bi-twitter"></i
+                                ></a>
+                              </div>
+                            </div>
+                          </div>
+                        </li>
+                        <li class="ss-carousel__item imgBlock">
+                          <img
+                            class="ss-carousel__item__image"
+                            src="/products/ladia-display-rack/1.JPG"
+                            alt=""
+                          />
+                        </li>
+
+                        <li class="ss-carousel__item imgBlock">
+                          <img
+                            class="ss-carousel__item__image"
+                            src="/products/ladia-display-rack/2.JPG"
+                            alt=""
+                          />
+                        </li>
+
+                        <li class="ss-carousel__item textBlock">
+                          <div class="ss-carousel__description">
+                            <p>
+                              Structural columns are transformed into sleek
+                              design elements, featuring layered wave-shaped
+                              display racks crafted from brass and
+                              stainless-steel pipes. Subtle brass accents lend a
+                              touch of luxury, creating a striking contrast.
+                              Previously challenging columns have been
+                              ingeniously reshaped into curved display racks
+                              that seamlessly wrap around the pillars, enhancing
+                              both spatial flow and product presentation.
+                            </p>
+                          </div>
+                        </li>
+
+                        <li class="ss-carousel__item videoBlock">
+                          <video muted autoplay loop>
+                            <source
+                              src="/products/ladia-display-rack/Ladia-Display-Counter-1.mp4"
+                              type="video/mp4"
+                              poster="/images/blank.png"
+                            />
+
+                            Your browser does not support the video tag.
+                          </video>
+                        </li>
+
+                        <li class="ss-carousel__item videoBlock">
+                          <video muted autoplay loop>
+                            <source
+                              src="/products/ladia-display-rack/Ladia-Display-Rack.mp4"
+                              type="video/mp4"
+                              poster="/images/blank.png"
+                            />
+
+                            Your browser does not support the video tag.
+                          </video>
+                        </li>
+                        <li class="ss-carousel__item textBlock">
+                          <div class="ss-carousel__description">
+                            <p>
+                              Despite the compact layout, the design ensures
+                              effortless circulation and a sense of openness.
+                              This approach harmoniously combines artistic
+                              expression with functional ingenuity, elevating
+                              the brand identity and enriching the customer
+                              experience.
+                            </p>
+                          </div>
+                        </li>
+
+                        <!-- <li class="ss-carousel__item textBlock">
+                          <div class="ss-carousel__description">
+                            <p>
+                              The installation captures the serene rhythm of
+                              waves frozen mid-motion, with suspended droplets
+                              and curved brass wings guiding the eye in a fluid
+                              choreography. As a moving art form, the chandelier
+                              invites guests to pause and immerse themselves in
+                              an atmosphere where opulence meets tranquility. It
+                              beautifully echoes the brand’s essence of elegance
+                              and calm.
+                            </p>
+                            <p>
+                              Hand-blown from delicate Borosil Italian glass,
+                              each droplet captures the purity of diamonds and
+                              the fluidity of ocean waves, suspended in a
+                              graceful wave design. Framed by curved, subtly lit
+                              brass wings, the chandelier blends craftsmanship,
+                              material innovation, and storytelling in a refined
+                              centerpiece.
+                            </p>
+                          </div>
+                        </li> -->
+
+                        <!-- <li class="ss-carousel__item videoBlock">
+                          <video muted autoplay loop>
+                            <source
+                              src="/products/ladia/Ladia- Chandlier.mp4"
+                              type="video/mp4"
+                              poster="/images/blank.png"
+                            />
+
+                            Your browser does not support the video tag.
+                          </video>
+                        </li>
+                        <li class="ss-carousel__item textBlock">
+                          <div class="ss-carousel__description">
+                            <p>
+                              The design draws from the serene experience of the
+                              ocean’s edge, creating an immersive environment
+                              that mirrors the purity and fluidity of lab-grown
+                              diamonds. A calming blue palette slows the heart
+                              rate and enhances the diamonds' brilliance,
+                              resulting in a luxurious yet tranquil space that
+                              embodies peaceful refinement.
+                            </p>
+                          </div>
+                        </li> -->
+
+                        <li class="ss-carousel__item imgBlock">
+                          <img
+                            class="ss-carousel__item__image"
+                            src="/products/ladia-display-rack/3.JPG"
+                            alt=""
+                          />
+                        </li>
+                        <li class="ss-carousel__item imgBlock">
+                          <img
+                            class="ss-carousel__item__image"
+                            src="/products/ladia-display-rack/4.JPG"
+                            alt=""
+                          />
+                        </li>
+
+                        <li class="ss-carousel__item mapBlock">
+                          <div id="map1l3" class="map"></div>
                         </li>
 
                         <li class="ss-carousel__item teamBlock threeGrid">
@@ -2194,6 +2461,13 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
         },
         {
           id: "map1l2",
+          coords: [17.432709, 78.4281349],
+          title: "Ladia - Lab Grown Diamond Jewellery",
+          address:
+            "Road No. 36, Jubilee Hills, beside US Polo Assn, Hyderabad, Telangana 500033",
+        },
+        {
+          id: "map1l3",
           coords: [17.432709, 78.4281349],
           title: "Ladia - Lab Grown Diamond Jewellery",
           address:
