--- a/architecture.html
+++ b/architecture.html
@@ -404,7 +404,7 @@
               </a>
               <ul class="submenu">
                 <li><a href="/architecture.html">Architecture</a></li>
-                <li><a href="/interior.html">Interior</a></li>
+                <li><a href="/index.html">Interior</a></li>
                 <li><a href="/products.html">Products</a></li>
               </ul>
             </li>
