--- a/products.html
+++ b/products.html
@@ -1283,7 +1283,7 @@
                               </div>
                               <div class="projectTitleInfo">
                                 <h3 class="projectTitle">
-                                  Ladia - Display Counter
+                                  Ladia - Display Rack
                                 </h3>
                                 <p class="location">
                                   JUBILEE HILLS, PUNJAGUTTA
