--- a/products.html
+++ b/products.html
@@ -71,8 +71,8 @@
         margin-bottom: 0;
         margin-left: auto;
         margin-right: auto;
-        width: 40%;
-        min-height: 350px;
+        width: 30%;
+        min-height: 250px;
         /* background-color: #ccc; */
         margin-bottom: 0.3rem;
         transition: all cubic-bezier(0.55, 0.055, 0.675, 0.19);
@@ -366,6 +366,106 @@
     </style>
   </head>
   <body>
+    <div id="preloader">
+      <div class="preloader-content">
+        <img src="/images/favicon.png" alt="Logo" class="preloader-logo" />
+        <div class="preloader-text">
+          <span>A</span><span>r</span><span>c</span><span>h</span><span>i</span
+          ><span>t</span><span>e</span><span>c</span><span>t</span
+          ><span>s</span>
+        </div>
+      </div>
+    </div>
+    <style>
+      #preloader {
+        position: fixed;
+        z-index: 9999;
+        width: 100%;
+        height: 100vh;
+        background: #fff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+      }
+
+      .preloader-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .preloader-logo {
+        width: 100px;
+        margin-bottom: 0px;
+      }
+
+      .preloader-text {
+        display: flex;
+        gap: 0px; /* initially no gap */
+        font-family: "Poppins", sans-serif;
+        font-weight: normal;
+        color: #ed1c24;
+        text-transform: uppercase;
+      }
+
+      .preloader-text span {
+        font-size: 14px;
+        opacity: 1;
+      }
+    </style>
+    <script>
+      window.addEventListener("load", () => {
+        const logo = document.querySelector(".preloader-logo");
+        const preloaderText = document.querySelector(".preloader-text");
+        const letters = document.querySelectorAll(".preloader-text span");
+
+        const tl = gsap.timeline();
+
+        // 1. Move logo to top-left and fade out while moving
+        tl.to(logo, {
+          x: -window.innerWidth / 2 + 60,
+          y: -window.innerHeight / 2 + 40,
+          scale: 0.5,
+          opacity: 0, // Fade out during move
+          duration: 1.2,
+          ease: "power2.inOut",
+        })
+
+          // 2. Increase letter gap
+          .to(
+            preloaderText,
+            {
+              gap: "40px",
+              duration: 1.2,
+              ease: "power2.inOut",
+            },
+            "-=1.2"
+          ) // start at same time as logo move
+
+          // 3. Move letters upward and fade out during move
+          .to(
+            letters,
+            {
+              y: "-=400",
+              opacity: 0,
+              duration: 1.2,
+              ease: "power2.inOut",
+            },
+            "-=1.2"
+          ) // also start together
+
+          // 4. Hide preloader
+          .to("#preloader", {
+            opacity: 0,
+            duration: 0.5,
+            ease: "power1.inOut",
+            onComplete: () => {
+              document.getElementById("preloader").style.display = "none";
+            },
+          });
+      });
+    </script>
     <div class="mainWrapper" style="position: relative">
       <div class="header">
         <div class="headerContainer">
