--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
             <li><a href="/news.html">News</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="#">People</a></li>
-            <li><a href="#">Careers</a></li>
+            <li><a href="/careers.html">Careers</a></li>
 
             <li><a href="#">Contact</a></li>
           </ul>
