--- a/careers.html
+++ b/careers.html
@@ -229,7 +229,7 @@
         text-transform: uppercase;
         font-size: 2rem;
       }
-      .container p {
+      .container section p {
         font-size: 16px;
         line-height: 24px;
         text-align: justify;
@@ -395,9 +395,47 @@
               </div>
               <div class="job-description">
                 <p>
-                  You will assist in creating architectural visualizations using
-                  3D tools, collaborating with design teams.
+                  We are looking for a creative and detail-oriented Junior
+                  Architect to join our team. The ideal candidate should have a
+                  strong design sense, technical proficiency, and a passion for
+                  interior architecture. You will be involved in concept
+                  development, drafting, 3D visualization, and project
+                  coordination.
                 </p>
+                <h4>Key Responsibilities:</h4>
+                <ul>
+                  <li>
+                    Assist in developing design concepts, space planning, and
+                    material selection.
+                  </li>
+                  <li>
+                    Prepare architectural drawings, 3D models, and renderings.
+                  </li>
+                  <li>Conduct site visits and support project supervision.</li>
+                  <li>
+                    Research and propose innovative materials and design
+                    solutions.
+                  </li>
+                </ul>
+                <h4>Requirements:</h4>
+                <ul>
+                  <li>
+                    Degree in Architecture / Interior Design or a related field.
+                  </li>
+                  <li>
+                    Proficiency in AutoCAD, SketchUp, V-Ray, Photoshop, and MS
+                    Office.
+                  </li>
+                  <li>
+                    Strong visualization, presentation, and detailing skills.
+                  </li>
+                  <li>
+                    Ability to work collaboratively in a fast-paced environment.
+                  </li>
+                  <li>
+                    Passion for interior design and a keen eye for aesthetics.
+                  </li>
+                </ul>
               </div>
             </div>
 
@@ -540,7 +578,7 @@
 https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js
 "></script>
 
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.css"
     />
@@ -576,7 +614,7 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
           ? "transform"
           : "fixed",
       });
-    </script>
+    </script> -->
     <script>
       function toggleSubmenu(el) {
         const parentLi = el.closest("li.has-submenu");
