--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
         z-index: 9999;
         width: 100%;
         height: 100vh;
-        background: #fff;
+        background: #000;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -416,26 +416,38 @@
         font-size: 14px;
         opacity: 1;
       }
+      body.loaded .mainWrapper {
+        transform: translateY(0);
+        opacity: 1;
+        transition: all 0.8s ease;
+      }
+
+      .mainWrapper {
+        transform: translateY(40px);
+        opacity: 0;
+      }
     </style>
     <script>
       window.addEventListener("load", () => {
         const logo = document.querySelector(".preloader-logo");
         const preloaderText = document.querySelector(".preloader-text");
         const letters = document.querySelectorAll(".preloader-text span");
+        const preloader = document.getElementById("preloader");
+        const body = document.body;
 
         const tl = gsap.timeline();
 
-        // 1. Move logo to top-left and fade out while moving
+        // 1. Move logo to top-left and fade out
         tl.to(logo, {
           x: -window.innerWidth / 2 + 60,
           y: -window.innerHeight / 2 + 40,
           scale: 0.5,
-          opacity: 0, // Fade out during move
+          opacity: 0,
           duration: 1.2,
           ease: "power2.inOut",
         })
 
-          // 2. Increase letter gap
+          // 2. Text gap increase and letters move up + fade out
           .to(
             preloaderText,
             {
@@ -444,9 +456,8 @@
               ease: "power2.inOut",
             },
             "-=1.2"
-          ) // start at same time as logo move
+          )
 
-          // 3. Move letters upward and fade out during move
           .to(
             letters,
             {
@@ -456,15 +467,16 @@
               ease: "power2.inOut",
             },
             "-=1.2"
-          ) // also start together
+          )
 
-          // 4. Hide preloader
+          // 3. Slide up the preloader itself
           .to("#preloader", {
-            opacity: 0,
-            duration: 0.5,
-            ease: "power1.inOut",
+            y: "-100%",
+            duration: 0.8,
+            ease: "power2.inOut",
             onComplete: () => {
-              document.getElementById("preloader").style.display = "none";
+              preloader.style.display = "none";
+              body.classList.add("loaded"); // show content with slide up
             },
           });
       });
@@ -498,7 +510,7 @@
           <span class="span"></span>
           <span class="span"></span>
           <ul id="menu">
-            <li class="has-submenu">
+            <!-- <li class="has-submenu">
               <a
                 href="javascript:void(0);"
                 class="submenu-toggle"
@@ -511,7 +523,8 @@
                 <li><a href="/index.html">Interior</a></li>
                 <li><a href="/products.html">Products</a></li>
               </ul>
-            </li>
+            </li> -->
+            <li><a href="/index.html">Projects</a></li>
             <li><a href="/news.html">News</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="#">People</a></li>
